# xkbd

./: AUTHORS  COPYING+  INSTALL  Makefile.am  Makefile.in  README  README.xml.old  build.sh  configure  configure.ac  mk.sh  xkbd-next-cfg.desktop  xkbd-next-patch.desktop  xkbd-onoff.desktop  xkbd.desktop
data/: Makefile.am  Makefile.in  all.qwerty.xkbd.in  arc-rg.patch.in  arc.patch.in  bord.patch.in  bord1.patch.in  bord2.patch.in  en_GB.qwerty.tabletpc.xkbd.in  en_GB.qwerty.tiny.xkbd.in  en_GB.qwerty.xkbd.in  en_US.qwerty.xkbd.in  mk.sh  my1  numsonly.xkbd.in  rg.patch.in  rg2.patch  solid-rg.patch.in  solid.patch.in  xkbd-arc.conf.in  xkbd-config  xkbd-config.in  xkbd-kp-f.conf  xkbd-kp-f.conf.in  xkbd-kp.conf  xkbd-kp.conf.in  xkbd-onoff  xkbd-onoff.in  xkbd-onoff.in1  xkbd-small-f.conf  xkbd-small-f.conf.in  xkbd-small.conf  xkbd-small.conf.in  xkbd-small1.conf  xkbd-small1.conf.in  xkbd-solid.conf.in  xkbd-std-14x5.conf.in  xkbd-std-14x6.conf.in  xkbd-std-15x5.conf.in  xkbd-std-15x6.conf.in  (+4 more)
data/img/: Makefile.am  Makefile.in  capslock.xpm
doc/: Makefile.in
packaging/: Makefile.in
packaging/ipkg/: Makefile.in
src/: Makefile.am  Makefile.in  box.c  box.h  button.c  button.h  kb.c  kb.h  kb.h.save  ks2unicode.c  ks2unicode.h  ks2unicode.pl  ks2unicode1.pl  libXkbd.c  libXkbd.h  libvirtkeys.c  libvirtkeys.h  mk.sh  stalloc.c  stalloc.h  structs.h  xkbd  xkbd.c  xkbd.c.orig  xkbdd  xkbdd-xss  xkbdd-xss.c  xkbdd.c  xkbswitch  xkbswitch.c  xssevent  xssevent.c  xtg  xtg.c
